cmake_minimum_required(VERSION 3.22)
project(ee205_lab_08d_animal_farm_1_to_clion)

set(CMAKE_CXX_STANDARD 14)

add_executable(ee205_lab_08d_animal_farm_1_to_clion main.cpp config.h enumstr.cpp enumstr.h Cat.cpp Cat.h Animal.cpp Animal.h Weight.cpp Weight.h Node.h List.cpp List.h SinglyLinkedList.cpp SinglyLinkedList.h Gender.h Mammal.cpp Mammal.h)
